<resources>
    <string name="app_name">Foodie</string>
    <string name="search_for_restaurants">Search for restaurants</string>
    <string name="overview">Overview</string>
    <string name="access_all_your_favorite_restaurants">Access all your favorite restaurants</string>
    <string name="favorites">Favorites</string>
    <string name="go_to_favorites">Go to Favorites</string>
    <string name="we_cannot_show_you_nearby_restaurants_without_location">We cannot show you nearby restaurants without location.</string>
    <string name="we_need_your_location">Permission required</string>
    <string name="grant_permission">Grant Permission</string>
    <string name="that_s_it_for_now">That\'s it for now!</string>
    <string name="for_you_with_love_vipul_kumar">For Foodies! with love.</string>
    <string name="near_you">Near You</string>
    <string name="browse_tasty_restaurants_all_around_you">Browse tasty restaurants all around you</string>
    <string name="sorry_we_could_not_find_anything_here">Sorry we could not find anything here</string>
</resources>
