<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="seeFavoritesListener"
            type="android.view.View.OnClickListener" />
    </data>

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:onClickListener="@{seeFavoritesListener}"
        app:cardBackgroundColor="#7540EE"
        app:cardCornerRadius="4dp"
        app:cardElevation="1dp"
        app:contentPadding="20dp"
        app:strokeColor="#7540EE"
        app:strokeWidth="1dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <TextView
                android:id="@+id/tvHeading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-medium"
                android:letterSpacing="0.1"
                android:text="@string/favorites"
                android:textColor="#fff" />

            <TextView
                android:id="@+id/tvText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:lineSpacingExtra="2dp"
                android:text="@string/access_all_your_favorite_restaurants"
                android:textColor="#88ffffff"
                app:layout_constraintStart_toStartOf="@id/tvHeading"
                app:layout_constraintTop_toBottomOf="@id/tvHeading" />

            <View
                android:id="@+id/viewSep"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="24dp"
                android:background="#44ffffff"
                app:layout_constraintTop_toBottomOf="@id/tvText" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="sans-serif-medium"
                android:text="@string/go_to_favorites"
                android:textAllCaps="true"
                android:textColor="#00D95A"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/viewSep" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>
</layout>
