<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView6"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="24dp"
            android:fontFamily="sans-serif-light"
            android:text="@string/we_need_your_location"
            android:textColor="@color/text_heading"
            android:textSize="@dimen/text_xxlarge"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView5" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_large"
            android:layout_marginTop="@dimen/spacing_regular"
            android:layout_marginEnd="24dp"
            android:lineSpacingExtra="2dp"
            android:text="@string/we_cannot_show_you_nearby_restaurants_without_location"
            android:textColor="@color/text_subheading"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView6" />

        <TextView
            android:id="@+id/tvAsk"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="24dp"
            android:background="?android:selectableItemBackground"
            android:fontFamily="sans-serif-medium"
            android:paddingStart="@dimen/spacing_medium"
            android:paddingTop="@dimen/spacing_regular"
            android:paddingEnd="@dimen/spacing_medium"
            android:paddingBottom="@dimen/spacing_regular"
            android:text="@string/grant_permission"
            android:textAllCaps="true"
            android:textColor="@color/app_green"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView5" />

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/imageView5"
            android:layout_width="0dp"
            android:layout_height="176dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:lottie_autoPlay="true"
            app:lottie_rawRes="@raw/lottie_santa_location"
            app:lottie_repeatCount="-1"
            tools:srcCompat="@tools:sample/avatars" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
